--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,51 @@
 *{
   font-family: 'Ubuntu', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* html {
+  font-size: 16px;
+}
+@media (min-width:768px) {
+  html{ font-size: 18px;}
+ 
+}
+@media (min-width:1024px) {
+  html{font-size: 19px;}
+  
+}
+@media (min-width:1280px) {
+  html{
+    font-size: 20px;
+  }
+  
+} */
+@media all and (max-width : 380px){
+
+  p {
+    font-size: 4vmin;
+  }
+  h2{
+    font-size: 5vmin;
+  }
+  h6{
+    font-size: 5vmin;
+  }
+  h3{
+    font-size: 5vmin;
+  }
+  h4{
+    font-size: 5vmin;
+  }
+  h5{
+    font-size: 5vmin;
+  }
+  a{
+    font-size: 4vmin;
+  }
+  label{
+    font-size: 5vmin;
+  }
 }
