--- a/src/Pages/Listed Project Properties/ListedProperties.css
+++ b/src/Pages/Listed Project Properties/ListedProperties.css
@@ -23,12 +23,12 @@
 @media all and (max-width : 580px) {
 
     .font-sizes{
-        font-size:1rem;
+        font-size:.80rem;
     }
     .dis{
         display: flex !important;
         flex-direction: row !important;
-        justify-content: space-between;
+        justify-content: space-between !important;
     }
     .textCeter{
         text-align: center;
